k8s/namespaces/media/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/managed-by: flux
  ports:
    - port: 9696
      targetPort: 9696
      protocol: TCP
      name: prowlarr-ui
  type: ClusterIP
